[project]
name = "mcp-server-nws-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.70.0",
    "dotenv>=0.9.9",
    "mcp>=1.17.0",
    "openai>=2.3.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
